[package]
name = "MTF"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
enigo = "0.1.3"
impl_new = "0.2.1"
rand = "0.8.5"
ratatui = "0.26.2"
tokio = "1.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


